--- a/package.json
+++ b/package.json
@@ -17,10 +17,17 @@
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "flourite": "^1.2.4",
+    "highlight.js": "^11.8.0",
+    "html-to-image": "^1.11.11",
+    "re-resizable": "^6.9.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-simple-code-editor": "^0.13.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
